--- a/FoodHitchApp/templates/rider_transactions.html
+++ b/FoodHitchApp/templates/rider_transactions.html
@@ -38,8 +38,7 @@
                     </p>
                 </div>
 
-                <!-- Button to chat with customer -->
-                <a href="{% url 'chat_room' delivery.DeliveryID %}" class="status-button chat-with-customer" style="color: #007e11;">
+                <a href="{% url 'rider_chat_view' customer_id=customer.id %}" class="button">
                     Chat with the Customer
                 </a>
                 
